<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbkg_1"
    tools:context=".LoginPage">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            android:elevation="20dp"
            android:background="@drawable/custom_edittext">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@color/white"
                android:padding="24dp">
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:visibility="gone"
                    android:layout_gravity="top"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SignUp"
                    android:id="@+id/loginText"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/purple"/>

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:paddingLeft="40dp"
                    android:hint="@string/enter_first_name"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="40dp"
                    />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:paddingLeft="40dp"
                    android:hint="@string/enter_last_name"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="40dp"
                    />
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:hint="@string/enter_email"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="40dp"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="27dp"
                    android:hint="@string/enter_password_one"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/purple">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordOne"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/enter_password_one"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"

                        android:textColorHint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="27dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/purple"
                    app:hintEnabled="true"
                    android:hint="@string/enter_password_two"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordTwo"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:padding="8dp"
                        android:hint="@string/enter_password_two"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"

                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/registerButton"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/purple"
                    android:background="@drawable/corner_radius_20dp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/login_now"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/loginNow"
            android:textColor="@color/purple"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
</ScrollView>
