<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="4"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.QuizApp"
    android:background="@color/white"
    tools:context=".admin.AdminMainActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/admin_home_bk_shape"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ADMIN DASHBOARD"
        android:textAlignment="center"
        android:layout_marginTop="-100dp"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center_horizontal"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_marginTop="60dp"
            >

            <androidx.cardview.widget.CardView
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_row="0"
                android:layout_column="0"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp"
                android:id="@+id/userHome">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:weightSum="4"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="3"
                        android:src="@drawable/lc_user_home"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:text="@string/admin_home"
                        android:textAlignment="center"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-medium"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_row="0"
                android:layout_column="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:layout_margin="10dp"
                android:id="@+id/userSection">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:weightSum="4"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="3"
                        android:src="@drawable/admin_user"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:text="@string/admin_users"
                        android:textAlignment="center"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-medium"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_row="1"
                android:layout_column="0"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:layout_margin="10dp"
                android:id="@+id/questionSection">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:weightSum="4"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="3"
                        android:src="@drawable/question"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:text="@string/admin_questions"
                        android:textAlignment="center"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-medium"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_row="1"
                android:layout_column="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:layout_margin="10dp"
                android:id="@+id/admin_logout">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:weightSum="4"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="3"
                        android:src="@drawable/admin_logout"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:text="@string/logout"
                        android:textAlignment="center"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-medium"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>
    </LinearLayout>


</LinearLayout>